--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -95,5 +95,10 @@ footer {
   text-align: center;
 }
 .table {
-  color: white;
+  width: 100%;
+  
+}
+li a:hover {
+  background-color: #17ca4d;
+  color:#777777;   
 }
