--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,7 +1,7 @@
 * {
   font-family: "georgia" sans-serif;
 }
-#nav-bar {
+.nav-bar {
   position: relative;
   top: 0;
   margin-left: 0%;
@@ -14,7 +14,7 @@
   border-bottom: 2px solid #dddddd; 
 }
 
-#heading_name {
+.heading_name {
   background-color: #4aaaa5;
   color: white;
   text-align: left;
@@ -90,11 +90,11 @@ h1 {
 }
 
 img {
-  width: 200px;
-  height: 200px;
+  width: 250px;
+  height: 250px;
   z-index: 1;
   position: relative;
-  margin-left: 10%;
+  margin-left: 0%;
 
 }
 
@@ -105,8 +105,8 @@ h2 {
   text-align: center;
   position: relative;
   height: 40px;
-  margin-left: 10%;
-  margin-top: -70px;
+  margin-left: 0%;
+  margin-top: -55px;
   z-index: 2;
   
 }
@@ -156,6 +156,7 @@ input {
 }
 textarea {
    width: 100%;
+   resize: none;
 
  }
  
