--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -2,16 +2,17 @@
   font-family: "georgia" sans-serif;
 }
 .nav-bar {
-  position: relative;
+  position: fixed;
   top: 0;
   margin-left: 0%;
   padding: 0%;
-  Height: 15%;
+  Height: 80px;
   width: 100%;
   color: gray;
   background-color: white;
   overflow: hidden;
   border-bottom: 2px solid #dddddd; 
+  z-index: 3;
 }
 
 .heading_name {
@@ -38,7 +39,7 @@
   width: 960px;
   margin-left: 10%;
   margin-right: 10%;
-  margin: auto;
+  margin: 50px auto 0 auto;
   background-color: white;
   padding: 3%;
   border: 2px solid #dddddd;
@@ -94,8 +95,7 @@ img {
   height: 250px;
   z-index: 1;
   position: relative;
-  margin-left: 0%;
-
+ 
 }
 
 h2 {
@@ -143,13 +143,13 @@ input:focus, textarea:focus, button:focus {
   border: 10px solid rgba(0,128,128);
 }
 
-.table .names {
+.names {
   list-style: none;
   float: left;
-  width: 30%;
+  
   height: 300px;
-  margin: 50px;
-
+  margin: 0 7% 0 10%;
+  
 }
 input {
   width: 100%;
